<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/app_txt_red"
                android:gravity="center"
                android:text="@string/invitation_friend"
                android:textColor="@color/white"
                android:textSize="@dimen/top_center_title_size" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/invititaon_friend" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="@dimen/layout_left_interval"
                android:layout_marginRight="@dimen/layout_right_interval"
                android:layout_marginTop="30dp"
                android:background="@color/app_invitation_friend_yellow"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/invitation_succ"
                        android:textColor="@color/app_invitation_txt"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="12"
                        android:textColor="@color/app_txt_black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/invitation_in_earnings"
                        android:textColor="@color/app_invitation_txt"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="12"
                        android:textColor="@color/app_txt_black"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_select_radius"
                    android:text="@string/share_link"
                    android:textColor="@color/white" />


                <Button
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="35dp"
                    android:background="@drawable/btn_select_radius"
                    android:text="@string/share_code_img"
                    android:textColor="@color/white" />


            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/invititaon_friend_title_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/invittation_rule"
                    android:textColor="@color/app_txt_black" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="24dp"
                android:background="@color/app_invitation_friend_yellow"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp">

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>
